--- a/internal/config/local.yaml
+++ b/internal/config/local.yaml
@@ -1,5 +1,5 @@
 env: "local" # Окружение - local, dev или prod
-#storage_path: "./storage/storage.db" # файл, в котором будет храниться наша БД
+storage_path: "./storage/storage.db" # файл, в котором будет храниться наша БД
 http_server: # конфигурация нашего http-сервера
   address: "localhost:8082"
   timeout: 4s
